<resources>
    <string name="app_name">觅宝</string>
    <string name="navigation_drawer_open">打开导航栏</string>
    <string name="navigation_drawer_close">关闭导航栏</string>
    <string name="action_settings">设置</string>
    <string name="confirm_exit">再按一次退出程序</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="loading">加载中……</string>
    <string name="success">成功</string>
    <string name="failure">加载失败</string>
    <string name="no_data">无相关数据</string>
    <string name="network_error">网络连接失败</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="nickname_empty">请输入昵称</string>
    <string name="username">帐号</string>
    <string name="username_hint">用户名/手机号</string>
    <string name="username_empty">请输入帐号</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认</string>
    <string name="password_hint">请输入登录密码</string>
    <string name="password_confirm_hint">请确认登录密码</string>
    <string name="password_different">两次输入密码不一致</string>
    <string name="password_empty">请输入密码</string>
    <string name="register">注册</string>
    <string name="register_hint">新用户？立即注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login_success">登录成功</string>
    <string name="username_error">用户不存在</string>
    <string name="password_error">密码错误</string>
    <string name="register_success">注册成功</string>
    <string name="username_exist">该用户名已被注册</string>
    <string name="nickname_exist">该昵称已被注册</string>
    <string name="not_loggedin">请重新登录</string>
    <string name="logo">logo</string>
    <string name="add_sign">+</string>
    <string name="colon">：</string>
    <string name="add">添加</string>
    <string name="add_success">添加成功</string>
    <string name="add_failure">添加失败</string>
    <string name="update">更新</string>
    <string name="update_success">更新成功</string>
    <string name="update_failure">更新失败</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="sync">同步</string>
    <string name="sync_success">同步完成</string>
    <string name="sync_failure">同步失败</string>
    <string name="get">获取</string>
    <string name="get_success">获取完成</string>
    <string name="get_failure">获取失败</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="upend">倒放</string>
    <string name="pause">暂停</string>
    <string name="play">正放</string>
    <string name="choose_album">选择目录</string>
    <string name="choose_photo">选择图片</string>
    <string name="location">定位</string>
    <string name="collect">收藏</string>
    <string name="route">路线</string>
    <string name="title_hint">请输入标题</string>
    <string name="type_hint">请输入类型</string>
    <string name="content_hint">请输入详细内容(可选)</string>
    <string name="p_private">私有</string>
    <string name="p_public">公开</string>
    <string name="basic_map">显示地图</string>
    <string name="basic_description">介绍如何创建一个基本地图</string>
    <string name="basic_texturemapview">显示地图(TextureMapView)</string>
    <string name="basic_texturemapview_description">介绍如何使用TextureMapview创建一个基本地图</string>
    <string name="base_fragment_map">Fragment创建地图</string>
    <string name="base_fragment_description">介绍SupportMapFragment方式创建地图</string>
    <string name="camera_demo">改变地图中心点</string>
    <string name="camera_description">介绍在地图中操作Camera各种功能</string>
    <string name="heatmap_demo">热力图功能</string>
    <string name="heatmap_description">介绍在地图中如何绘制热力图</string>
    <string name="viewpager_map">ViewPager TextureMapView</string>
    <string name="viewpger_map_description">介绍如何在ViewPager中添加Map(防止滑动时黑屏)</string>
    <string name="clear_map">Clear</string>
    <string name="compass">指南针</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">AMaps3D Demos</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="events_demo">Events功能</string>
    <string name="events_description">介绍对地图的点击，长按，拖动地图事件功能</string>
    <string name="fill_stroke">Fill Stroke</string>
    <string name="fill_color">Fill Color</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="hybrid">Hybrid</string>
    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
        <item>@string/night_mode</item>
        <item>@string/navi_mode</item>
    </string-array>
    <string name="poiclick_demo">地图Poi点击功能</string>
    <string name="poiclick_description">介绍地图底图poi点击事件和处理</string>
    <string name="layers_demo">Layers图层功能</string>
    <string name="layers_description">介绍地图图层控制</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationSensorGPS_demo">gps追随功能</string>
    <string name="locationSensorGPS_demo_description">介绍如何用gps定位图标箭头随手机转动而转动</string>
    <string name="locationsource_demo">Location小蓝点功能</string>
    <string name="locationsource_description">介绍对系统定位显示小蓝点功能</string>
    <string name="locationmodesource_demo">Location三种模式</string>
    <string name="locationmodesource_description">介绍定位、追随、选择不同模式使用</string>
    <string name="locationGPS_demo">gps定位功能</string>
    <string name="locationGPS_description">介绍如何使用gps定位</string>
    <string name="locationNetwork_description">介绍如何使用网络定位</string>
    <string name="locationNetwork_demo">网络定位功能</string>
    <string name="marker_demo">Markers功能</string>
    <string name="marker_description">介绍在地图上添加marker和infoWindow</string>
    <string name="mapOption_demo">AMapOptions实现地图</string>
    <string name="mapOption_description">介绍用AMapOptions展示一个地图</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">移动camera</string>
    <string name="touch_the_map">地图触摸事件</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="night_mode">Night</string>
    <string name="navi_mode">Navi</string>
    <string name="polygon_demo">Polygons功能</string>
    <string name="polygon_description">介绍在地图绘制多边形</string>
    <string name="polyline_demo">Polylines功能</string>
    <string name="polyline_description">介绍在地图中绘制线条</string>
    <string name="groundoverlay_demo">GroundOverlay功能</string>
    <string name="groundoverlay_description">介绍在地图中绘制GroundOverlay功能</string>
    <string name="circle_demo">Circles功能</string>
    <string name="circle_description">介绍在地图中绘制圆形</string>
    <string name="navigatearrow_demo">NavigateArrow功能</string>
    <string name="navigatearrow_description">介绍如何在地图中绘制导航指示箭头功能</string>
    <string name="arc_demo">绘制弧线</string>
    <string name="arc_description">介绍在地图中绘制弧形</string>
    <string name="screenshot_demo">地图截屏功能</string>
    <string name="screenshot_description">介绍对地图进行截屏</string>
    <string name="set_min_max_zoomlevel">限制缩放级别功能</string>
    <string name="set_min_max_zoomlevel_description">介绍对地图进行最小最大级别的设置</string>
    <string name="limit_bounds">限制显示区域功能</string>
    <string name="limit_bounds_description">介绍对地图进行限制显示区域的设置</string>
    <string name="properties_polyline">设置Polyline属性</string>
    <string name="properties_polygon">设置Polygon属性</string>
    <string name="properties_circle">设置Circle属性</string>
    <string name="busline_demo">Busline公交查询</string>
    <string name="busline_description">介绍如何在地图中绘制BusLine</string>
    <string name="route_demo">Route路径规划</string>
    <string name="route_description">介绍如何在地图中绘制Route</string>
    <string name="cloud_demo">云图搜索</string>
    <string name="cloud_description">介绍云图搜索功能</string>
    <string name="indoormap_demo">室内地图功能</string>
    <string name="indoormap_description">室内地图功能展示</string>
    <string name="rotate">旋转手势</string>
    <string name="reset_map">Reset</string>
    <string name="marker_animation_grow">生长动画</string>
    <string name="marker_animation_jump">移动动画</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="scroll">滑动手势</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="terrain">Terrain</string>
    <string name="tilt">倾斜手势</string>
    <string name="traffic">Traffic</string>
    <string name="buildings">Buildings</string>
    <string name="maptext">MapText</string>
    <string name="transparency">Transparency</string>
    <string name="opengl_demo">Opengl接口功能</string>
    <string name="opengl_description">介绍地图中开放Opengl接口功能</string>
    <string name="uisettings_demo">UI Settings功能</string>
    <string name="uisettings_description">介绍地图中UI Settings功能</string>
    <string name="geocoder_demo">地理编码 功能</string>
    <string name="geocoder_description">介绍 geocoder地理编码 功能</string>
    <string name="poikeywordsearch_demo">poi关键字搜索</string>
    <string name="poikeywordsearch_description">介绍poi关键字搜索功能</string>
    <string name="poiaroundsearch_demo">poi周边搜索</string>
    <string name="poiaroundsearch_description">介绍poi周边搜索功能</string>
    <string name="offlinemap_demo">离线地图功能</string>
    <string name="offlinemap_description">介绍如何使用离线地图</string>
    <string name="district_demo">行政区划查询</string>
    <string name="district_description">政区划查询功能演示</string>
    <string name="district_boundary_demo">行政区划边界查询</string>
    <string name="district_boundary_description">政区划查询功能返回边界演示</string>
    <string name="search_title">搜索关键字</string>
    <string name="up_arrow">\u2191</string>
    <string name="width">Width</string>
    <string name="zoom_position">zoom显示及位置</string>
    <string name="zoom_buttons">显示</string>
    <string name="zoom_gestures">缩放手势</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">—</string>
    <string name="scale">比例尺</string>
    <string name="buttonScale">获取比例尺</string>
    <string name="beijing">"北京"</string>
    <string name="start">"开始"</string>
    <string name="stop">"停止"</string>
    <string name="remove">"删除"</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="center_right">右中</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区/县</string>
    <string name="all_offline">所有城市</string>
    <string name="download_offline">下载管理</string>
    <string name="city_name">城市名称</string>
    <string name="city_size">城市大小</string>
    <string name="download_progress">0%</string>
    <string name="my_city">当前城市</string>
    <string name="sso_complete">完成</string>
    <string name="share_demo">短串分享</string>
    <string name="share_description">短串分享功能演示</string>
    <string name="weather_demo">天气查询</string>
</resources>